Fixed NestedQuery